--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^22.10.2",
     "axios": "^1.7.9",
     "gh-pages": "^6.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
