Chore: 서버 API 주소 변경에 따른 환경변수 수정

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # KAKAO LOGIN
 VITE_KAKAO_CLIENT_ID = 9c35100cd45c705417bf81e23e8c7734
-VITE_KAKAO_REDIRECT_URI = https://222.121.46.20:80/login/oauth2/code/kakao
+# VITE_KAKAO_REDIRECT_URI = https://222.121.46.20:80/login/oauth2/code/kakao
+
+# SERVER API
+VITE_SERVER_API = https://43.203.122.164:8080
+VITE_KAKAO_REDIRECT_URI = https://43.203.122.164:8080/login/oauth2/code/kakao
