Chore: hooks 폴더 생성에 의한 alias 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@assets/*": ["assets/*"],
       "@styles": ["styles/*"],
       "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
       "@layouts/*": ["layouts/*"],
       "@pages/*": ["pages/*"],
       "@Explore/*": ["Explore/*"],
