--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-query": "^5.66.0",
     "@types/node": "^22.10.2",
     "axios": "^1.7.9",
+    "framer-motion": "^12.5.0",
     "gh-pages": "^6.2.0",
+    "gsap": "^3.12.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
