--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.66.0",
     "@types/node": "^22.10.2",
     "axios": "^1.7.9",
+    "event-source-polyfill": "^1.0.31",
     "framer-motion": "^12.5.0",
     "gh-pages": "^6.2.0",
     "gsap": "^3.12.7",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
