--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
