--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.10",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
