Chore: 디렉토리 불러오기 방식 alias 방식 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,10 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["/*"],
+      "@api/*": ["api/*"],
       "@assets/*": ["assets/*"],
-      "@styles": ["styles/*"],
       "@components/*": ["components/*"],
+      "@constants/*": ["constants/*"],
       "@hooks/*": ["hooks/*"],
       "@layouts/*": ["layouts/*"],
       "@pages/*": ["pages/*"],
@@ -19,6 +20,8 @@
       "@Main/*": ["Main/*"],
       "@User/*": ["User/*"],
       "@store/*": ["store/*"],
+      "@styles": ["styles/*"],
+      "@types": ["types/*"],
     },
     "composite": true,
     "lib": ["dom", "ESNext"],
